--- a/server/templates/server/complete.html
+++ b/server/templates/server/complete.html
@@ -1,4 +1,4 @@
-{% extends "server/base.html" %}
+{% extends "admin/base.html" %}
 
 {% block title %}アップロード完了{% endblock title %}
 {% block content %}
