--- a/server/templates/server/form.html
+++ b/server/templates/server/form.html
@@ -1,6 +1,6 @@
 {% extends "admin/base.html" %}
 
-{% block title %}アップローダサンプル{% endblock title %}
+{% block title %}アップローダ{% endblock title %}
 {% block content %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
