--- a/server/templates/server/ctrl_apps.html
+++ b/server/templates/server/ctrl_apps.html
@@ -5,31 +5,36 @@
     {% csrf_token %}
     {% load static %}
     <p>hello {{ request.user.username }}</p>
+    <table>
     {% for app in app_list %}
-    <p>
-        {{ app.name  }}
-        {% if app.status == 1 %}
-            <a href="{% url 'app_launch' app.id%}">
-                <button>launch</button>
-            </a>
-            idle
-        {% elif app.status == 2 %}
-            <img src="{% static 'loading.gif'  %}">
-            launching
-        {% elif app.status == 3 %}
-            <a href="{% url 'app_stop' app.id  %}">
-                <button>stop</button>
-            </a>
-            runnning
-        {% elif app.status == 4 %}
-            <img src="{% static 'loading.gif'  %}">
-            stopping
-        {% elif app.status == 5 %}
-            stopped
-        {% else %}
-            error: invalid status
-        {% endif %}
-    </p>
+        <tr>
+            <td>{{ app.name  }}</td>
+            {% if app.status == 1 %}
+                <td>
+                    <a href="{% url 'app_launch' app.id%}">
+                        <button>launch</button>
+                    </a>
+                </td>
+                <td>idle</td>
+            {% elif app.status == 2 %}
+                <td><img src="{% static 'loading.gif'  %}"></td>
+                <td>launching</td>
+            {% elif app.status == 3 %}
+                <td>
+                    <a href="{% url 'app_stop' app.id  %}">
+                        <button>stop</button>
+                    </a>
+                </td>
+                <td>runnning</td>
+            {% elif app.status == 4 %}
+                <td><img src="{% static 'loading.gif'  %}"></td>
+                <td>stopping</td>
+            {% else %}
+                <td></td>
+                <td>error: invalid status</td>
+            {% endif %}
+        </tr>
     {% endfor %}
+    </table>
     <input type="button" value="reload" onclick="location.reload();">
 {% endblock content %}
