アプリ管理画面を定期的に自動でリロード

--- a/server/templates/server/ctrl_apps.html
+++ b/server/templates/server/ctrl_apps.html
@@ -36,5 +36,7 @@
         </tr>
     {% endfor %}
     </table>
-    <input type="button" value="reload" onclick="location.reload();">
+    <script>
+        setTimeout(function(){location.reload()}, 5000);
+    </script>
 {% endblock content %}
