トップページ作成, ハートビート受信時にエージェントのIPアドレスをセットしていなかった問題を修正
トップページ作成,
ハートビート受信時にエージェントのIPアドレスをセットしていなかった問題を修正

--- a/server/templates/server/form.html
+++ b/server/templates/server/form.html
@@ -1,4 +1,4 @@
-{% extends "admin/base.html" %}
+{% extends "server/base.html" %}
 
 {% block title %}アップローダ{% endblock title %}
 {% block content %}
