--- a/server/templates/server/ctrl_apps.html
+++ b/server/templates/server/ctrl_apps.html
@@ -1,4 +1,4 @@
-{% extends "admin/base.html" %}
+{% extends "server/base.html" %}
 
 {% block title %}アプリ起動/停止管理画面{% endblock title %}
 {% block content %}
